# 2-PACK-2.8inch-ESP32-Solo-Miner-LCD-Display

Eagle_SCH&PCB/1.0/: ESP32 Miner LCD-2.8 inch V1.0 251225(1).sch  ESP32 Miner LCD-2.8 inch V1.0 251225.brd
example/V1.0/Arduino_Code/LVGL_Arduino2.8/: LVGL_Arduino2.8.ino
example/V1.0/Arduino_Code/example/: example.ino
example/V1.0/Arduino_Code/libraries/TFT_eSPI/: User_Setup.h
example/V1.0/ESP32-2.8-MicroPython-Code/DHT20&LED_LVGL_Demo/: Miner_ESP32_28.py
example/V1.0/ESP32-2.8-MicroPython-Code/DHT20&LED_LVGL_Demo/lib/: ui.py
example/V1.0/ESP32-2.8-MicroPython-Code/GPIO_Example/: Example02_Button.py  Example03_DHT20.py  Example04_display_dial.py  Example06_SD.py  Example07_SPK.py  Example08_UART.py
example/V1.0/ESPHome/: 2.8_ESPHome.yaml  miner-hmi-28-24.yaml
example/V1.0/IDF_Code/DHT_screen_2.4_2.8_base/: CMakeLists.txt  sdkconfig.old
example/V1.0/IDF_Code/DHT_screen_2.4_2.8_base/components/DHT20/: CMakeLists.txt
example/V1.0/IDF_Code/DHT_screen_2.4_2.8_base/main/: CMakeLists.txt  CrowPanel_ESP32_24_28.cpp
example/V1.0/IDF_Code/DHT_screen_2.8_base/: sdkconfig  sdkconfig.old
example/V1.0/IDF_Code/DHT_screen_2.8_base/main/: CMakeLists.txt  CrowPanel_ESP32_2.4_2.8.cpp
example/V1.0/PlatformIO/CrowPanel_ESP32_2.8/src/: main.cpp
factory_firmware/: readme.md
factory_sourcecode/V1.0/LVGL_Arduino2.8RTP-CeShi-Hor/: LVGL_Arduino2.8RTP-CeShi-Hor.ino
libraries/LovyanGFX/src/: LGFX_ESP32_ILI9341.hpp
libraries/TFT_eSPI/: User_Setup.h
libraries/UI_Miner/: ui_img_crowpanel_ui_bj_dis04028h_png.c
(+17 files in other folders)
